@@ -2,6 +2,7 @@ Revision history for Log-Abstraction
 
 0.23
 	Better error message when we don't know what to do
+	Allow the syslog config to say 'server' instead of 'host' for consistency with CHI
 
 0.22	Thu Jul 17 08:22:16 EDT 2025
 	Error() now sends to syslog like warn()
